@@ -1,3 +1,9 @@
+2006-10-22  Esteban Sanchez  <esteban@steve-o.org>
+
+	* data/comics.xml:
+
+	Added a lot of new comics and removed or updated some others.
+
 2006-10-21  Carlos Garcia Campos  <carlosgc@gnome.org>
 
 	* data/buoh.schemas.in:
